--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -175,7 +175,8 @@
   background: none;
   border: none;
   cursor: pointer;
-
+  padding: 8px; 
+  margin: 8px;
   span {
     width: 24px;
     height: 2px;
