--- a/src/components/layout/header/Header.module.scss
+++ b/src/components/layout/header/Header.module.scss
@@ -175,7 +175,7 @@
   background: none;
   border: none;
   cursor: pointer;
-  padding: 8px; 
+  padding: 8px;
   margin: 8px;
   span {
     width: 24px;
@@ -187,6 +187,7 @@
 
   @media (max-width: 992px) {
     display: flex;
+    z-index: 10000;
   }
 }
 
