--- a/src/components/main-page/services/styles.module.scss
+++ b/src/components/main-page/services/styles.module.scss
@@ -10,6 +10,10 @@
   padding: 20px;
   overflow: hidden;
   transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+
+  @media (max-width:1750px) {
+    height: 350px;
+  }
   // cursor: pointer;
 
   // Градиентная подсветка при hover
@@ -92,7 +96,11 @@
     width: 70%;
     opacity: 0.9;
 
-    @media (max-width: 1600px) {
+    // @media (max-width: 1750px) {
+    //   font-size: 15px;
+    // }
+
+    @media (max-width: 1750px) {
       font-size: 14px;
     }
   }
@@ -277,13 +285,13 @@
 
 .service_card:nth-child(3) {
   &:hover .serviceImage {
-    transform: scaleX(-1) translate(-5%, 10%) scale(1.1);
+    transform: translate(25%, 10%) scale(1.1);
   }
 
   .serviceImage {
     width: 100%;
     height: 100%;
-    transform: scaleX(-1) translate(-10%, 15%);
+    transform: translate(30%, 15%);
   }
 }
 
@@ -291,25 +299,25 @@
   &:hover .serviceImage {
     width: 130%;
     height: 130%;
-    transform: translate(25%, -5%) scale(1.01);
+    transform: translate(25%, -5%) scale(0.9);
   }
 
   .serviceImage {
     width: 120%;
     height: 120%;
-    transform: translate(30%, -5%);
+    transform: translate(20%, -7%) scale(.85);
   }
 }
 
 .service_card:nth-child(4) {
   &:hover .serviceImage {
-    transform: translate(30%, 20%) rotate(-35deg) scale(1.1);
+    transform: translate(13%, -5%) scale(1.1);
   }
 
   .serviceImage {
     width: 120%;
     height: 120%;
-    transform: translate(35%, 25%) rotate(-40deg);
+    transform: translate(10%, -3%) ;
   }
 }
 
@@ -363,7 +371,7 @@
   &:hover .serviceImage {
     width: 120%;
     height: 120%;
-    transform: translate(20%, -15%) scale(1.03);
+    transform: translate(27%, 0%) scale(1.03);
   }
 
   .serviceImage {
@@ -433,13 +441,13 @@
   &:hover .serviceImage {
     width: 120%;
     height: 120%;
-    transform: translate(23%, 20%) scale(1.1) ;
+    transform: translate(27%, -5%) scale(1.05) ;
   }
 
   .serviceImage {
     width: 100%;
     height: 100%;
-    transform: translate(32%, 50%) ;;
+    transform: translate(32%, 0%) ;;
   }
 }
 
