--- a/src/components/common/hero-block/styles.module.scss
+++ b/src/components/common/hero-block/styles.module.scss
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 400px;
+  height: 250px;
   position: relative;
   background-color: var(--color-container);
   border-radius: 18px;
@@ -45,7 +45,7 @@
   animation: slideUp 0.6s ease 0.2s both;
 
   @media (max-width: 1024px) {
-    height: 350px;
+    height: 300px;
   }
 
   @media (max-width: 768px) {
@@ -200,11 +200,11 @@
 .hero_left__bottom {
   display: flex;
   gap: 20px;
-  height: 300px;
+  height: 500px;
   animation: slideUp 0.6s ease 0.3s both;
 
-  @media (max-width: 1024px) {
-    height: 250px;
+  @media (max-width: 1300px) {
+    height: fit-content;
   }
 
   @media (max-width: 768px) {
@@ -223,15 +223,22 @@
   background-color: white;
   transition: all 0.3s ease;
 
+  .videoBackground {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    // object-position: center center;
+  }
+
   @media (max-width: 768px) {
     width: 100%;
-    height: 250px;
+    height: 100%;
     border-radius: 20px;
   }
 
-  @media (max-width: 480px) {
-    display: none !important;
-  }
+  // @media (max-width: 480px) {
+  //   display: none !important;
+  // }
 
   &:hover {
     transform: translateY(-5px);
