--- a/src/components/common/hero-block/styles.module.scss
+++ b/src/components/common/hero-block/styles.module.scss
@@ -226,7 +226,7 @@
   .videoBackground {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: cover;
     // object-position: center center;
   }
 
