--- a/src/components/common/hero-block/styles.module.scss
+++ b/src/components/common/hero-block/styles.module.scss
@@ -216,6 +216,7 @@
 
 .hero_left__bottom__left {
   // width: 45%; при наличии второго блока
+  display: flex;
   width: 100%;
   height: 100%;
   border-radius: 25px;
@@ -232,7 +233,7 @@
 
   @media (max-width: 768px) {
     width: 100%;
-    height: 100%;
+    height: fit-content;
     border-radius: 20px;
   }
 
