--- a/src/components/common/hero-block/styles.module.scss
+++ b/src/components/common/hero-block/styles.module.scss
@@ -36,7 +36,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 250px;
+  height: 400px;
   position: relative;
   background-color: var(--color-container);
   border-radius: 18px;
@@ -200,7 +200,7 @@
 .hero_left__bottom {
   display: flex;
   gap: 20px;
-  height: 500px;
+  height: 320px;
   animation: slideUp 0.6s ease 0.3s both;
 
   @media (max-width: 1300px) {
@@ -211,6 +211,7 @@
     flex-direction: column;
     height: auto;
     gap: 15px;
+    display: none;
   }
 }
 
